--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   </head>
   <body>
     <header>
-      <h1>Should I watch it?</h1>
       <form id="form">
-        <input type="text" placeholder="Search" id="search" class="search" />
+        <input type="text" id="search" class="search" placeholder="Search">
       </form>
     </header>
+
     <main id="main"></main>
-    <footer class="footer">
-      <p>
-        This project uses the TMDb API but is not endorsed or certified by TMDb.
-      </p>
-    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
